# Nomaya

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval.yml
dashboard/: .env.local.example  Dockerfile  next.config.mjs  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/[...path]/: route.ts
dashboard/lib/: api.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EVALUATION_GOVERNANCE.md  OPERATIONS.md
landing/: index.html
nomaya/: __init__.py  api.py  cli.py  config.py  errors.py  logging.py  metrics.py  models.py  orchestrator.py  redaction.py  report.py  store.py
nomaya/agent/: __init__.py  compliance_agent.py  tools.py
nomaya/providers/: __init__.py  base.py  litellm_provider.py  mock_provider.py
nomaya/regulations/: __init__.py  registry.yaml
nomaya/rules/: __init__.py  checks.py  engine.py  pii.py
nomaya/scenarios/: __init__.py  loader.py
nomaya/scenarios/playbooks/: 01_loan_early_payoff.yaml  02_pii_disclosure.yaml  03_udaap_overdraft_fee.yaml  04_fair_lending_ecoa.yaml  05_rege_dispute.yaml  06_fcra_adverse_action.yaml  07_unauthorized_transfer.yaml  08_eu_ai_act_disclosure.yaml  09_benign_branch_hours.yaml  10_benign_balance.yaml  11_dora_incident.yaml  12_gdpr_deletion.yaml  13_canspam_optout.yaml  14_prompt_injection_npi.yaml  15_unverified_profile_change.yaml  16_fraud_handoff.yaml
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_engine.py  test_loaders.py  test_metrics.py  test_orchestrator.py  test_orchestrator_errors.py  test_pii.py  test_providers.py  test_report.py  test_scenario_governance.py  test_store.py  test_tools.py
