[project]
name = "nomaya"
version = "0.1.0"
description = "Nomaya — a provider-agnostic compliance evaluation suite for AI agents in financial services."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "8harath" }]
dependencies = [
    "litellm>=1.55.0",      # one interface to every leading lab (OpenAI, Anthropic, Google, Mistral, Cohere, Ollama, Bedrock, ...)
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
nomaya = "nomaya.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nomaya"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
