[project]
name = "nomaya"
version = "0.1.0"
description = "Nomaya — a provider-agnostic compliance evaluation suite for AI agents in financial services."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "8harath" }]
dependencies = [
    "litellm>=1.55.0",      # one interface to every leading lab (OpenAI, Anthropic, Google, Mistral, Cohere, Ollama, Bedrock, ...)
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",        # FastAPI TestClient transport
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
nomaya = "nomaya.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nomaya"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, pyupgrade, bugbear, comprehensions
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = [
    "E501",  # line length is enforced by the formatter, not the linter
    "B008",  # FastAPI uses `Depends()`/`Header()` as argument defaults by design
    "E702",  # compact `col(); col()` table-building style is used deliberately
    "UP042", # keep `(str, Enum)` — broadest compatibility, stable pydantic serialization
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "E731"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # litellm / uvicorn ship partial or no stubs
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
files = ["nomaya"]
