[project]
name = "nomaya"
version = "0.1.0"
description = "Nomaya — a provider-agnostic compliance evaluation suite for AI agents in financial services."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "8harath" }]
dependencies = [
    "litellm>=1.55.0",      # one interface to every leading lab (OpenAI, Anthropic, Google, Mistral, Cohere, Ollama, Bedrock, ...)
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",          # FastAPI TestClient transport
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
nomaya = "nomaya.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nomaya"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"nomaya/report.py" = ["E501"]   # inline HTML template
"nomaya/api.py" = ["B008"]      # FastAPI's Depends-in-default idiom
"nomaya/models.py" = ["UP042"]  # str+Enum kept for pydantic/json round-trip stability

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["litellm", "litellm.*"]
ignore_missing_imports = true
